    "qp.pl". Updated the minimum required version to 8.12 and changed the
    value of the Logtalk flag "prolog_dialect" from "qu" to "qp" in order
    to match the value of the new Prolog flag "dialect" implemented in
    Qu-Prolog 8.12. Added support for the "smart_compilation" compiler flag.
    Improved startup time when using the "qplgt.sh" integration script. 


2.39.2 - May 4, 2010

    Changed the internal representation of most entity properties to use a
    more compact bit representation, stored in the tables of loaded entities.

    Changed the internal representation of non-critical predicate properties
    to use a more compact bit representation, which includes the "multifile"
    predicate property, stored in the tables of entity declared predicates.

    Changed the type of the built-in methods (\+)/1, call/N, once/1, catch/3,
    throw/1, bagof/3, findall/3, forall/2, setof/3, self/1, sender/1, this/1
    and parameter/2 from local predicates to private predicates. Corrected a
    bug in the predicate_property/2 built-in method where some of those built-
    in methods would be reported as public. These changes should only require
    updating any application code that explicitly expected the exception term
    permission_error(access, local_predicate, Pred), which have been changed
    to permission_error(access, private_predicate, Pred).

    Added support for parsing operator declarations in the uses/2, public/1,
    protected/1, and private/1 directives.

    Updated the Logtalk compiler in order to avoid generating unnecessary (but
    harmless) catchall clauses for predicate declaration lookups when there
    are no local predicate declarations.

    Updated the Logtalk compiler in order to convert calls to the non-standard
    assert/1 built-in predicate as calls to the assertz/1 built-in predicate.

    Updated the Logtalk compiler in order to reject use_module/2 directives